Adding created api, updating prisma for style
